--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>
-            <img id ="title"src ="img/logo.png">
+            
             GeekyBytes Wie
         </title>
+        <link rel = "icon" href =  "img/logo.png" 
+        type = "image/x-icon"> 
     </head>
 </html>
