--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
             
             GeekyBytes Wie
         </title>
-        <link rel = "icon" href =  "img/logo.png" 
-        type = "image/x-icon"> 
+        <link rel = "icon" href =  "img/logo.png" type = "image/x-icon"> 
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
+    <body>
+
+    </body>
 </html>
