--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <html>
     <head>
         <title>
-            
+                
             GeekyBytes Wie
         </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel = "icon" href =  "img/logo.png" type = "image/x-icon"> 
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
-
+        <div class="header">
+            <div class="nav-bar">
+                <div class="nav-logo">
+                    <img src="img/wie-logo.png">
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <a href="#"><li>ABOUT</li></a>
+                        <a href="#"><li>ABOUT</li></a>
+                        <a href="#"><li>EXPLORE EVENTS</li></a>
+                        <a href="#"><li>SPEAKERS</li></a>
+                        <a href="#"><li>CONTACT US</li></a>
+                    </ul>
+                </div>
+            </div>
     </body>
 </html>
