--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             GeekyBytes Wie
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel = "icon" href =  "img/logo.png" type = "image/x-icon"> 
+        <link rel = "icon" href =  "img/wie-logo.png" type = "image/x-icon"> 
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
