working on flexbox

--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
         </div>
     </div>
 
+    <div class="grid">
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+        <div class="col">
+            <p>women in ai</p>
+        </div>
+
+          
+    </div>
+
                
     </body>
 </html>
