--- a/index.html
+++ b/index.html
@@ -14,17 +14,23 @@
                 <img src="img/wie-logo.png">
             </div>
             <div class="nav-links">
+                <i class="fa fa-close" onclick="closeMenu()></i>
                 <ul>
-                    <a href="#"><li>ABOUT</li></a>
                     <a href="#"><li>ABOUT</li></a>
                     <a href="#"><li>EXPLORE EVENTS</li></a>
                     <a href="#"><li>SPEAKERS</li></a>
                     <a href="#"><li>CONTACT US</li></a>
                 </ul>
             </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </div>
     </div>
+    <script>
+        var show= document.getElementById("")
+        function showMenu(){
 
+        }
+    </script>
                
     </body>
 </html>
