--- a/index.html
+++ b/index.html
@@ -27,22 +27,32 @@
 
     <div class="grid">
         <div class="col">
-            <p>women in ai</p>
+            <img src="carousel-images/undraw_multitasking_hqg3.png">
+            <p>WIE BLOGGING</p>
+        </div>
+        <div class="col">
+            <p>Women in ai.....Text goes here</p>
+        </div>
+        <div class="col">
+            <img src="carousel-images/undraw_blogging_vpvv.png">
+            <p>ASTROPHYSICS EVENT</p>
         </div>
         <div class="col">
             <p>women in ai</p>
         </div>
         <div class="col">
-            <p>women in ai</p>
+            <img src="carousel-images/undraw_women_day_2m89.png">
+            <p>AI EVENT</p>
         </div>
         <div class="col">
             <p>women in ai</p>
         </div>
         <div class="col">
-            <p>women in ai</p>
+            <img src="carousel-images/undraw_podcast_q6p7.png">
+            <p>Women in engg</p>
         </div>
         <div class="col">
-            <p>women in ai</p>
+            <p>AI EVENT</p>
         </div>
 
           
