--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="nav-logo">
                 <img src="img/wie-logo.png">
             </div>
-            <div class="nav-links">
+            <div class="nav-links" id="nav-links">
                 <i class="fa fa-close" onclick="closeMenu()></i>
                 <ul>
                     <a href="#"><li>ABOUT</li></a>
@@ -26,9 +26,13 @@
         </div>
     </div>
     <script>
-        var show= document.getElementById("")
+        var show= document.getElementById("nav-links")
         function showMenu(){
+            show.style.right ="0";
+        }
 
+        function closeMenu(){
+            show.style.right ="-200px";
         }
     </script>
                
