--- a/index.html
+++ b/index.html
@@ -50,32 +50,39 @@
     
     <div class="grid">
         <div class="col">
-            <img src="carousel-images/undraw_multitasking_hqg3.png">
+            <img src="carousel-images/undraw_animating_1rgh.svg">
             <p>WIE BLOGGING</p>
         </div>
         <div class="col">
             <p>Women in ai.....Text goes here</p>
         </div>
         <div class="col">
-            <img src="carousel-images/undraw_blogging_vpvv.png">
+            <img src="carousel-images/undraw_blogging_vpvv.svg">
             <p>ASTROPHYSICS EVENT</p>
         </div>
         <div class="col">
             <p>women in ai</p>
         </div>
         <div class="col">
-            <img src="carousel-images/undraw_women_day_2m89.png">
+            <img src="carousel-images/undraw_multitasking_hqg3 (1).svg">
             <p>AI EVENT</p>
         </div>
         <div class="col">
-            <p>women in ai</p>
+            <p>DEVELOPER'S CLUB</p>
         </div>
         <div class="col">
-            <img src="carousel-images/undraw_podcast_q6p7.png">
-            <p>Women in engg</p>
+            <img src="carousel-images/undraw_creative_woman_v415.svg">
+            <p>19-A</p>
         </div>
         <div class="col">
-            <p>AI EVENT</p>
+            <p>CREATIVE ART</p>
+        </div>
+        <div class="col">
+            <img src="carousel-images/undraw_listening_1u79.svg">
+            <p>MUSE-IC</p>
+        </div>
+        <div class="col">
+            <p>SINGING CLUB</p>
         </div>
 
           
