--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <img src="img/wie-logo.png">
             </div>
             <div class="nav-links" id="nav-links">
-                <!--<i class="fa fa-close" onclick="closeMenu()"></i>-->
                 <ul>
                     <a href="#"><li>ABOUT</li></a>
                     <a href="#"><li>EXPLORE EVENTS</li></a>
                     <a href="#"><li>SPEAKERS</li></a>
                     <a href="#"><li>CONTACT US</li></a>
+                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
                 </ul>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
         </div>
     </div>
     
@@ -73,15 +73,6 @@
         </div>
 
           
-    </div>
-    <script>
-        var show= document.getElementById("nav-links")
-        function showMenu(){
-            show.style.right ="0";
-        }
-        function closeMenu(){
-            show.style.right ="-200px";
-        }
-    </script>           
+    </div>          
     </body>
 </html>
