--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel = "icon" href =  "img/wie-logo.png" type = "image/x-icon"> 
         <link rel="stylesheet" type="text/css" href="./style.css">
+        <script src="https://kit.fontawesome.com/b3d4e41f7e.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="header">
@@ -81,5 +82,23 @@
           
     </div>
                        
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <h3>WIE</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ipsam.</p>
+            <ul class="socials">
+                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-bottom">
+            <p>copyright &copy;2021 WIE</p>
+        </div>
+    </footer>
     </body>
 </html>
