nav bar responsive

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
         </div>
 
           
-    </div>          
+    </div> 
+    <script>
+        function myFunction() {
+          var x = document.getElementById("nav-links");
+          if (x.className === "nav-links") {
+            x.className += " responsive";
+          } else {
+            x.className = "nav-links";
+          }
+        }
+        </script>         
     </body>
 </html>
