--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
+        <div class="footerdiv">
             <h3>WIE</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ipsam.</p>
+            <p class="fpara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ipsam.</p>
             <ul class="socials">
-                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
-                <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://googleplus.com"><i class="fab fa-google-plus-g"></i></a></li>
+                <li><a href="https://linkedin.com"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
-        <div class="footer-bottom">
+        <div class="footer-copyright">
             <p>copyright &copy;2021 WIE</p>
         </div>
     </footer>
