--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#"><li>SPEAKERS</li></a>
                     <a href="#"><li>CONTACT US</li></a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i></a>
                 </ul>
             </div>
         </div>
