--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" type="text/css" href="./style.css">
         <script src="https://kit.fontawesome.com/b3d4e41f7e.js" crossorigin="anonymous"></script>
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
