--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                        
 
     <!-- Footer -->
-    <!-- <footer>
+     <footer>
         <div class="footerdiv">
             <h3>WIE</h3>
             <p class="fpara">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, ipsam.</p>
@@ -130,7 +130,7 @@
         <div class="footer-copyright">
             <p>copyright &copy;2021 WIE</p>
         </div>
-    </footer> -->
+    </footer> 
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script>AOS.init();</script> 
     </body>
