--- a/index.html
+++ b/index.html
@@ -178,11 +178,9 @@
         <div class="footerdiv">
             <h3>WIE</h3>
             <ul class="socials">
-                <li><a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://instagram.com"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://googleplus.com"><i class="fab fa-google-plus-g"></i></a></li>
-                <li><a href="https://linkedin.com"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://facebook.com"><img src="./img/facebook.png" alt=""></a></li>
+                <li><a href="https://twitter.com"><img src="./img/instagram.png" alt=""></a></li>
+                <li><a href="https://instagram.com"><i class="./img/email.png"></i></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
