--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <ul class="socials">
                 <li><a href="https://facebook.com"><img src="./img/facebook.png" alt=""></a></li>
                 <li><a href="https://twitter.com"><img src="./img/instagram.png" alt=""></a></li>
-                <li><a href="https://instagram.com"><i class="./img/email.png"></i></a></li>
+                <li><a href="https://instagram.com"><img src="./img/email.png"></a></li>
             </ul>
         </div>
         <div class="footer-copyright">
